# iris_event_flutter

./: .gitignore  CHANGELOG.md  README.md  ffigen.sh  ffigen_config.yaml  pubspec.yaml
.github/workflows/: build.yml  smoke-build.yaml
android/: .gitignore  build.gradle
android/src/main/java/io/agora/iris_event/iris_event/: IrisEventPlugin.java
ci/: cmake-build-android.sh  cmake-build-ios.sh  cmake-build-macos.sh  cmake-build-windows.sh  grep_version.sh
cxx/: CMakeLists.txt  build-android.sh  build-ios.sh  build-macos.sh  build-windows.sh
cxx/src/: iris_event.cc  iris_event.h  iris_life_cycle_observer.h  iris_life_cycle_observer.mm
example/: .gitignore  pubspec.yaml
example/android/app/: build.gradle
example/lib/: main.dart
ios/: .gitignore  iris_event.podspec
ios/libs/: VERSION.md
ios/libs/iris_event_handler.xcframework/: Info.plist
ios/libs/iris_event_handler.xcframework/ios-arm64_armv7/iris_event_handler.framework/: Info.plist  iris_event_handler
ios/libs/iris_event_handler.xcframework/ios-arm64_x86_64-simulator/iris_event_handler.framework/: Info.plist  iris_event_handler
lib/: iris_event.dart
lib/src/: native_iris_event_bindings.dart
macos/: iris_event.podspec
windows/: CMakeLists.txt
